# AndroidUn7zip

./: .gitignore  README.md  build.gradle  settings.gradle
AndUn7z/: .cproject  .project  AndroidManifest.xml
AndUn7z/.externalToolBuilders/: New_Builder (1).launch
AndUn7z/jni/: Android.mk  Application.mk
AndUn7z/jni/un7z/: JniWrapper.h  andun7z.cpp  com_hu_andun7z_AndUn7z.cpp
AndUn7z/res/drawable/: efp__header_buttons_selector.xml  efp_dark__activated_background_holo.xml  efp_dark__btn_check_holo.xml  efp_dark__edit_text_holo.xml  efp_dark__item_background_holo.xml  efp_dark__list_selector_background_transition_holo.xml  efp_dark__list_selector_holo.xml  efp_light__activated_background_holo.xml  efp_light__btn_check_holo.xml  efp_light__edit_text_holo.xml  efp_light__item_background_holo.xml  efp_light__list_selector_background_transition_holo.xml  efp_light__list_selector_holo.xml
AndUn7z/res/layout/: activity_main.xml  efp__empty.xml  efp__grid_item.xml  efp__list_item.xml  efp__main_activity.xml  efp__new_folder.xml
AndUn7z/res/values-v11/: efp_dark__themes.xml  efp_light__themes.xml
AndUn7z/res/values-zh/: strings.xml
app/: build.gradle  proguard-rules.pro
gradle/wrapper/: gradle-wrapper.properties
un7zip/: build.gradle  proguard-rules.pro
un7zip/src/main/cpp/: 7zExtracter.c  7zExtracter.h  7zFunctions.c  7zFunctions.h  Android.mk  Application.mk  CMakeLists.txt  ndk-helper.h  un7zip.c
un7zip/src/main/cpp/un7zip/: 7zAssetFile.cpp  7zAssetFile.h  7zExtractor.cpp  7zExtractor.h  7zFunctions.cpp  7zFunctions.h  ndk-helper.h  un7zApi.cpp  un7zApi.h
(+50 files in other folders)
